--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author: lalone
 
 # This URL is the main address for absolute links. Don't include a slash at the end.
 #
-url: 'https://https://stisig.github.io'
+url: 'https://stisig.github.io'
 baseurl: ''
 
 # This is for the editing function in _/includes/improve_content
