--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,37 +1,41 @@
-- title: Start
+- title: Home
   url: "/"
   side: left
 
-- title: Getting Started
-  url: "/getting-started/"
+- title: About
+  url: "/about/"
   side: left
 
-- title: "Templates"
-  url: "/design/"
+- title: Blog
+  url: "/blog/"
   side: left
   dropdown:
-  - title: "Grid & Colors"
-    url: "/design/grid/"
-  - title: "Typography"
-    url: "/design/typography/typography/"
-  - title: "Page/Post"
-    url: "/design/page/"
-  - title: "Post-Left-Sidebar"
-    url: "/design/post-left-sidebar/"
-  - title: "Post-Right-Sidebar"
-    url: "/design/post-right-sidebar/"
-  - title: "Page Full-Width"
-    url: "/design/page-fullwidth/"
-  - title: "Blog-Page"
-    url: "/blog/"
-  - title: "Video"
-    url: "/design/video/"
-  - title: "Gallery"
-    url: "/design/gallery/"
-  - title: "Portfolio"
-    url: "/design/portfolio/"
+  - title: "Blog Archive"
+    url: "/blog/archive/"
+    
+#   dropdown:
+#   - title: "Grid & Colors"
+#     url: "/design/grid/"
+#   - title: "Typography"
+#     url: "/design/typography/typography/"
+#   - title: "Page/Post"
+#     url: "/design/page/"
+#   - title: "Post-Left-Sidebar"
+#     url: "/design/post-left-sidebar/"
+#   - title: "Post-Right-Sidebar"
+#     url: "/design/post-right-sidebar/"
+#   - title: "Page Full-Width"
+#     url: "/design/page-fullwidth/"
+#   - title: "Blog-Page"
+#     url: "/blog/"
+#   - title: "Video"
+#     url: "/design/video/"
+#   - title: "Gallery"
+#     url: "/design/gallery/"
+#   - title: "Portfolio"
+#     url: "/design/portfolio/"
 
-- title: "Header Styles"
+- title: "Getting Started with Coding"
   url: "/headers/"
   side: left
   dropdown:
