--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -36,23 +36,23 @@
 #     url: "/design/portfolio/"
 
 - title: "Getting Started with Coding"
-  url: "/headers/"
+  url: "/coding/"
   side: left
   dropdown:
-  - title: "Header with Full-Width-Image"
-    url: "/design/header-full-width-image/"
-  - title: "Header with Image and Pattern"
-    url: "/design/header-image-pattern/"
-  - title: "Header with image and color"
-    url: "/design/header-image-color/"
-  - title: "Header Only With Logo"
-    url: "/design/header-logo-only/"
-  - title: "Header With Text"
-    url: "/design/header-with-text/"
-  - title: "No Header"
-    url: "/design/no-header/"
-  - title: "No Header but Image"
-    url: "/design/no-header-but-image/"
+#   - title: "Header with Full-Width-Image"
+#     url: "/design/header-full-width-image/"
+#   - title: "Header with Image and Pattern"
+#     url: "/design/header-image-pattern/"
+#   - title: "Header with image and color"
+#     url: "/design/header-image-color/"
+#   - title: "Header Only With Logo"
+#     url: "/design/header-logo-only/"
+#   - title: "Header With Text"
+#     url: "/design/header-with-text/"
+#   - title: "No Header"
+#     url: "/design/no-header/"
+#   - title: "No Header but Image"
+#     url: "/design/no-header-but-image/"
 
 - title: Documentation
   url: "/documentation/"
@@ -63,12 +63,12 @@
   - title: "Roadmap"
     url: "/roadmap/"
 
-- title: Blog
-  url: "/blog/"
-  side: left
-  dropdown:
-  - title: "Blog Archive"
-    url: "/blog/archive/"
+# - title: Blog
+#   url: "/blog/"
+#   side: left
+#   dropdown:
+#   - title: "Blog Archive"
+#     url: "/blog/archive/"
 
 - title: "Search"
   url: "/search/"
