--- a/_data/socialmedia.yml
+++ b/_data/socialmedia.yml
@@ -1,10 +1,10 @@
 - name: GitHub
-  url: http://github.com/phlow
+  url: https://github.com/STISIG
   class: icon-github
-  title: Code und mehr...
+  title: "Reopository for STISIG"
 
 - name: YouTube
-  url: http://www.youtube.com/PhlowMedia
+  url: https://www.youtube.com/channel/UCvr5GQKCqoAoZLwkyVmnZ7A
   class: icon-youtube
   title: "Videos, Video-Anleitungen und Filme von Phlow auf YouTube"
 
@@ -13,15 +13,15 @@
   class: icon-twitter
   title: "Immer das Neuste von Phlow gibt es auf Twitter"
 
-- name: Mixcloud
-  url: http://www.mixcloud.com/phlow/
-  class: icon-cloud
-  title: "Mixe, was sonst?"
+# - name: Mixcloud
+#   url: http://www.mixcloud.com/phlow/
+#   class: icon-cloud
+#   title: "Mixe, was sonst?"
 
-- name: Phlow YouTube Google+
-  url: https://plus.google.com/u/0/+Phlow
-  class: icon-googleplus
-  title: "YouTube Google+"
+# - name: Phlow YouTube Google+
+#   url: https://plus.google.com/u/0/+Phlow
+#   class: icon-googleplus
+#   title: "YouTube Google+"
 
 # - name: Facebook
 #   url: http://www.facebook.com/
