--- a/_data/network.yml
+++ b/_data/network.yml
@@ -10,12 +10,12 @@
   class: "parent-org"
   title: "IAEM Emerging Technology Committee"
 
-- name: "Images by Unsplash"
-  url: "http://unsplash.com/"
-  class: "rss-link"
-  title: "Images by Unsplash"
+# - name: "Images by Unsplash"
+#   url: "http://unsplash.com/"
+#   class: "rss-link"
+#   title: "Images by Unsplash"
 
-- name: "Using Backstretch by Scott Robbin"
-  url: "http://srobbin.com/jquery-plugins/backstretch/"
-  class: "sitemap-link"
-  title: "Using Backstretch by Scott Robbin"
+# - name: "Using Backstretch by Scott Robbin"
+#   url: "http://srobbin.com/jquery-plugins/backstretch/"
+#   class: "sitemap-link"
+#   title: "Using Backstretch by Scott Robbin"
